objects/nMONITOR__Informatica_Cloud_Integration__c.object
<CustomObject>
    <description>Object housing metadata, statistics, exceptions, and other data relevant to the Informatica Cloud Integration managed by nCino Data Services.</description>
    <fields>
        <fullName>nMONITOR__Auto_Create_Case__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Box is checked by ICS if configured error threshold is exceeded by daily Monitor Record results.</description>
        <inlineHelpText>Box is checked by ICS if configured error threshold is exceeded by daily Monitor Record results.</inlineHelpText>
        <label>Auto Create Case</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nMONITOR__CUSO_Bundle_Version__c</fullName>
        <description>Informatica Cloud Bundle Version for nCino_CUSO_Syncrhonization_Standard</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Informatica Cloud Bundle Version.</inlineHelpText>
        <label>CUSO Bundle Version</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nMONITOR__Collateral_Bundle_Version__c</fullName>
        <description>Informatica Cloud Bundle Version for nCino_Collateral2_Standard.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Informatica Cloud Bundle Version.</inlineHelpText>
        <label>Collateral Bundle Version</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nMONITOR__Collateral_Errors__c</fullName>
        <description>Collateral Errors for Collateral, Collateral Pledged, Loan Collateral aggregate, Lien, and Collateral Ownership Objects.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Collateral Errors for Collateral, Collateral Pledged, Loan Collateral aggregate, Lien, and Collateral Ownership Objects.</inlineHelpText>
        <label>Collateral Errors</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nMONITOR__Collateral_Exceptions__c</fullName>
        <defaultValue>&quot;0&quot;</defaultValue>
        <description>Collateral Exceptions for Collateral (Collateral Mgmt) Task.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Collateral Exceptions for Collateral (Collateral Mgmt) Task.</inlineHelpText>
        <label>Collateral Exceptions</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nMONITOR__Collateral_Mgmt__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Indicates the Collateral Record causing the Exception, if it already exists in nCino.</description>
        <inlineHelpText>Indicates the Collateral Record causing the Exception, if it already exists in nCino.</inlineHelpText>
        <label>Collateral Mgmt</label>
        <referenceTo>LLC_BI__Collateral__c</referenceTo>
        <relationshipLabel>Informatica Cloud Integrations</relationshipLabel>
        <relationshipName>Informatica_Cloud_Integrations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>nMONITOR__Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field indicating that the Monitoring processes are complete.</description>
        <inlineHelpText>Field indicating that the Monitoring processes are complete.</inlineHelpText>
        <label>Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nMONITOR__Connection_Errors__c</fullName>
        <description>Connection Errors for Connections Task.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Connection Errors for Connections Task.</inlineHelpText>
        <label>Connection Errors</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nMONITOR__Connection_Exceptions__c</fullName>
        <defaultValue>&quot;0&quot;</defaultValue>
        <description>Connection Exceptions for Connections Task.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Connection Exceptions for Connections Task.</inlineHelpText>
        <label>Connection Exceptions</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nMONITOR__Connection_Role__c</fullName>
        <description>Connection Role translated by Informatica Cloud.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Connection Role translated by Informatica Cloud.</inlineHelpText>
        <label>Connection Role</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nMONITOR__Contact_Errors__c</fullName>
        <description>Contact Errors for Contact Task.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Contact Errors for Contact Task.</inlineHelpText>
        <label>Contact Errors</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nMONITOR__Contact_Exceptions__c</fullName>
        <defaultValue>&quot;0&quot;</defaultValue>
        <description>Contact Exceptions for Contact Task.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Contact Exceptions for Contact Task.</inlineHelpText>
        <label>Contact Exceptions</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nMONITOR__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Indicates the probable exception Record.</description>
        <inlineHelpText>Indicates the probable exception Record.</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Informatica Cloud Integrations</relationshipLabel>
        <relationshipName>Informatica_Cloud_Integrations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>nMONITOR__Covenant_Bundle_Version__c</fullName>
        <description>Informatica Cloud Bundle Version for nCino_Covenant_Standard</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Informatica Cloud Bundle Version.</inlineHelpText>
        <label>Covenant Bundle Version</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nMONITOR__Covenant_Errors__c</fullName>
        <description>Covenant Errors for Covenant, Loan Covenant, Account Covenant, and Covenant Compliance Tasks.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Covenant Errors for Covenant, Loan Covenant, Account Covenant, and Covenant Compliance Tasks.</inlineHelpText>
        <label>Covenant Errors</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nMONITOR__Covenant_Exceptions__c</fullName>
        <defaultValue>&quot;0&quot;</defaultValue>
        <description>Covenant Exceptions for Covenant (Covenant Mgmt) Task.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Covenant Exceptions for Covenant (Covenant Mgmt) Task.</inlineHelpText>
        <label>Covenant Exceptions</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nMONITOR__Covenant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Indicates the existing Covenant causing the Exception if the Covenant Object is synchronized. Will be NULL for migrations.</description>
        <inlineHelpText>Indicates the existing Covenant causing the Exception if the Covenant Object is synchronized. Will be NULL for migrations.</inlineHelpText>
        <label>Covenant Mgmt</label>
        <referenceTo>LLC_BI__Covenant2__c</referenceTo>
        <relationshipLabel>Informatica Cloud Integrations</relationshipLabel>
        <relationshipName>Informatica_Cloud_Integrations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>nMONITOR__Current_Product_Line__c</fullName>
        <description>Contains Product Line value on existing Loan Record in nCino.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Contains Product Line value on existing Loan Record in nCino.</inlineHelpText>
        <label>Current Product Line</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nMONITOR__Current_Product_Type__c</fullName>
        <description>Contains Product Type value on existing Loan Record in nCino.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Contains Product Type value on existing Loan Record in nCino.</inlineHelpText>
        <label>Current Product Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nMONITOR__Current_Product__c</fullName>
        <description>Contains Product value on existing Loan Record in nCino.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Contains Product value on existing Loan Record in nCino.</inlineHelpText>
        <label>Current Product</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nMONITOR__Daily_Integration_Bundle_Version__c</fullName>
        <description>Informatica Cloud Bundle Version for nCino_Data_Integration_Standard.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Informatica Cloud Bundle Version.</inlineHelpText>
        <label>Daily Integration Bundle Version</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nMONITOR__Deposit_Errors__c</fullName>
        <description>Contact Errors for Contact Task.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Contact Errors for Contact Task.</inlineHelpText>
        <label>Deposit Errors</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nMONITOR__Deposit_Exceptions__c</fullName>
        <defaultValue>&quot;0&quot;</defaultValue>
        <description>Deposit Exceptions for Deposit Task.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Deposit Exceptions for Deposit Task.</inlineHelpText>
        <label>Deposit Exceptions</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nMONITOR__Deposit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Indicates the Deposit Record causing the Exception, if it already exists in nCino.</description>
        <inlineHelpText>Indicates the Deposit Record causing the Exception, if it already exists in nCino.</inlineHelpText>
        <label>Deposit</label>
        <referenceTo>LLC_BI__Deposit__c</referenceTo>
        <relationshipLabel>Informatica Cloud Integrations</relationshipLabel>
        <relationshipName>Informatica_Cloud_Integrations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>nMONITOR__End_Time__c</fullName>
        <description>Time that the Task Flow completed in Informatica Cloud.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Time that the Task Flow completed in Informatica Cloud.</inlineHelpText>
        <label>End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>nMONITOR__Entity_Involvement_Errors__c</fullName>
        <description>Entity Involvement Errors for Entity Involvement Task.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Entity Involvement Errors for Entity Involvement Task.</inlineHelpText>
        <label>Entity Involvement Errors</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nMONITOR__Entity_Involvement_Exceptions__c</fullName>
        <defaultValue>&quot;0&quot;</defaultValue>
        <description>Entity Involvement Exceptions for Entity Involvement Task.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Entity Involvement Exceptions for Entity Involvement Task.</inlineHelpText>
        <label>Entity Involvement Exceptions</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nMONITOR__Exception_Description__c</fullName>
        <description>Displays the reason a row of data is an exception.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Displays the reason a row of data is an exception.</inlineHelpText>
        <label>Exception Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>nMONITOR__Household__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Indicates the probable exception Household Relationship Record</description>
        <inlineHelpText>Indicates the probable exception Household Relationship Record</inlineHelpText>
        <label>Household</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Informatica Cloud Integrations (Household)</relationshipLabel>
        <relationshipName>Informatica_Cloud_Integrations1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>nMONITOR__IsCollateralPledged__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsCollateralPledged</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nMONITOR__IsCollateral__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Signifies that the Exception Record should be a Collateral Record.</description>
        <inlineHelpText>Signifies that the Exception Record should be a Collateral Record.</inlineHelpText>
        <label>IsCollateral</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nMONITOR__IsConnection__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Signifies that the Exception Record should be a Connection Record.</description>
        <inlineHelpText>Signifies that the Exception Record should be a Connection Record.</inlineHelpText>
        <label>IsConnection</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nMONITOR__IsCovenant__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Signifies that the Exception Record should be a Covenant Record.</description>
        <inlineHelpText>Signifies that the Exception Record should be a Covenant Record.</inlineHelpText>
        <label>IsCovenant</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nMONITOR__IsEntityInvolvement__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Signifies that the Exception Record should be an Entity Involvement Record.</description>
        <inlineHelpText>Signifies that the Exception Record should be an Entity Involvement Record.</inlineHelpText>
        <label>IsEntityInvolvement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nMONITOR__IsLoan__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Signifies that the Exception Record should be a Loan Record.</description>
        <inlineHelpText>Signifies that the Exception Record should be a Loan Record.</inlineHelpText>
        <label>IsLoan</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nMONITOR__IsParticipation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Signifies that the Exception Record should be a Loan Record.</description>
        <inlineHelpText>Signifies that the Exception Record should be a Loan Record.</inlineHelpText>
        <label>IsParticipation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nMONITOR__IsRelationship__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Signifies that the Exception Record should be a Relationship Record.</description>
        <inlineHelpText>Signifies that the Exception Record should be a Relationship Record.</inlineHelpText>
        <label>IsRelationship</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nMONITOR__Loan_Errors__c</fullName>
        <description>Loan Errors across Loan and Sub Loan Tasks.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Loan Errors across Loan and Sub Loan Tasks.</inlineHelpText>
        <label>Loan Errors</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nMONITOR__Loan_Exceptions__c</fullName>
        <defaultValue>&quot;0&quot;</defaultValue>
        <description>Loan Exceptions across Loan and Sub Loan Tasks.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Loan Exceptions across Loan and Sub Loan Tasks.</inlineHelpText>
        <label>Loan Exceptions</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nMONITOR__Loan_Hierarchy_Value__c</fullName>
        <description>Indicates the Loan Hierarchy level of the Exception.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Indicates the Loan Hierarchy level of the Exception.</inlineHelpText>
        <label>Loan Hierarchy Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nMONITOR__Loan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Indicates the Loan Record causing the Exception, if it already exists in nCino.</description>
        <inlineHelpText>Indicates the Loan Record causing the Exception, if it already exists in nCino.</inlineHelpText>
        <label>Loan</label>
        <referenceTo>LLC_BI__Loan__c</referenceTo>
        <relationshipLabel>Informatica Cloud Integrations</relationshipLabel>
        <relationshipName>Informatica_Cloud_Integrations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>nMONITOR__Logged__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Updated by Batch Apex. Signifies that an Exception Record has been added to the number of exceptions for that day.</description>
        <inlineHelpText>Updated by Batch Apex. Signifies that an Exception Record has been added to the number of exceptions for that day.</inlineHelpText>
        <label>Logged</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nMONITOR__Migration_Bundle__c</fullName>
        <description>Name and Bundle version for any one Migration Bundle used.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Name and Bundle version for any one Migration Bundle used.</inlineHelpText>
        <label>Migration Bundle</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nMONITOR__Monitor__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox leveraged in Monitoring automation.</description>
        <inlineHelpText>Checkbox leveraged in Monitoring automation.</inlineHelpText>
        <label>Monitor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nMONITOR__Monitoring_Task_Flow__c</fullName>
        <description>Set the name of the Monitor Task Flow.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Set the name of the Monitor Task Flow.</inlineHelpText>
        <label>Monitoring Task Flow</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nMONITOR__On_Demand_Email_to_Case__c</fullName>
        <defaultValue>&quot;datamonitoring@ncino.com&quot;</defaultValue>
        <description>On-Demand Email to Case</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>On-Demand Email to Case</inlineHelpText>
        <label>On-Demand Email to Case</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>nMONITOR__Participation_Errors__c</fullName>
        <description>Participation Errors for Participation Task.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Participation Errors for Participation Task.</inlineHelpText>
        <label>Participation Errors</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nMONITOR__Participation_Exceptions__c</fullName>
        <defaultValue>&quot;0&quot;</defaultValue>
        <description>Participation Exceptions for Participation Task.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Participation Exceptions for Participation Task.</inlineHelpText>
        <label>Participation Exceptions</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nMONITOR__Product_Package__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Indicates the Product Package Record associated with the Loan Exception.</description>
        <inlineHelpText>Indicates the Product Package Record associated with the Loan Exception.</inlineHelpText>
        <label>Product Package</label>
        <referenceTo>LLC_BI__Product_Package__c</referenceTo>
        <relationshipLabel>Informatica Cloud Integrations</relationshipLabel>
        <relationshipName>Informatica_Cloud_Integrations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>nMONITOR__Record_Age__c</fullName>
        <formula>nMONITOR__Today__c -  DATEVALUE(CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>nMONITOR__Relationship_Errors__c</fullName>
        <description>Relationship errors across Relationship and Household Relationship Tasks.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Relationship errors across Relationship and Household Relationship Tasks.</inlineHelpText>
        <label>Relationship Errors</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nMONITOR__Relationship_Exceptions__c</fullName>
        <defaultValue>&quot;0&quot;</defaultValue>
        <description>Relationship Exceptions across Relationship and Household Relationship Tasks.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Relationship Exceptions across Relationship and Household Relationship Tasks.</inlineHelpText>
        <label>Relationship Exceptions</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nMONITOR__Relationship_Name__c</fullName>
        <description>Holds the value Field Mapped to &apos;Name&apos; on the Relationship Object. Corresponds to the row of exception data.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Holds the value Field Mapped to &apos;Name&apos; on the Relationship Object. Corresponds to the row of exception data.</inlineHelpText>
        <label>Relationship Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nMONITOR__Relationship_Type__c</fullName>
        <description>Houses the Relationship Type of the exception data.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Houses the Relationship Type of the exception data.</inlineHelpText>
        <label>Relationship Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nMONITOR__Relationship__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Indicates the probable exception Record.</description>
        <inlineHelpText>Indicates the probable exception Record.</inlineHelpText>
        <label>Relationship</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Informatica Cloud Integrations</relationshipLabel>
        <relationshipName>Informatica_Cloud_Integrations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>nMONITOR__Secure_Agent_Data_inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that the Secure Agent leveraged for the ICS Integration is currently up and running.</description>
        <inlineHelpText>Indicates that the Secure Agent leveraged for the ICS Integration is currently up and running.</inlineHelpText>
        <label>Secure Agent Data inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nMONITOR__Secure_Agent_Id__c</fullName>
        <description>Id value of Secure Agent to monitor.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Id value of Secure Agent to monitor.</inlineHelpText>
        <label>Secure Agent Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nMONITOR__Secure_Agent_Process_inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that the Secure Agent process used for ICRT Integrations is inactive.</description>
        <inlineHelpText>Indicates that the Secure Agent process used for ICRT Integrations is inactive.</inlineHelpText>
        <label>Secure Agent Process inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nMONITOR__Start_Time__c</fullName>
        <description>Time that the Task Flow was initiated in Informatica Cloud.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Time that the Task Flow was initiated in Informatica Cloud.</inlineHelpText>
        <label>Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>nMONITOR__Task_Flow_to_Monitor__c</fullName>
        <description>The name of the Task Flow being monitored with Setting Record.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Specify the name of the Task Flow being monitored with Setting Record. If multiple Task Flows are present, create multiple Setting Records.</inlineHelpText>
        <label>Task Flow to Monitor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nMONITOR__Tax_ID_or_SSN__c</fullName>
        <description>Tax Identification Number or Social Security Number for the row of exception data.</description>
        <inlineHelpText>Tax Identification Number or Social Security Number for the row of exception data.</inlineHelpText>
        <label>Tax ID or SSN</label>
        <length>25</length>
        <maskChar>X</maskChar>
        <maskType>lastFour</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>nMONITOR__Today__c</fullName>
        <formula>TODAY()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Today</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>nMONITOR__Total_Errors__c</fullName>
        <defaultValue>&quot;0&quot;</defaultValue>
        <description>Total Number of Errors reading from source and writing to nCino.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Total Number of Errors reading from source and writing to nCino.</inlineHelpText>
        <label>Total Errors</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nMONITOR__Total_Exceptions__c</fullName>
        <defaultValue>&quot;0&quot;</defaultValue>
        <description>Total Number of Exceptions across all Standard Tasks.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Total Number of Exceptions across all Standard Tasks.</inlineHelpText>
        <label>Total Exceptions</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nMONITOR__Total_Successes__c</fullName>
        <description>Field holding the total number of successful rows from sources written to nCino.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Field holding the total number of successful rows from sources written to nCino.</inlineHelpText>
        <label>Total Successes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nMONITOR__Translated_Product_Line__c</fullName>
        <description>Product Line translation in Informatica Cloud.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Product Line translation in Informatica Cloud.</inlineHelpText>
        <label>Translated Product Line</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nMONITOR__Translated_Product_Type__c</fullName>
        <description>Product Type translated by Informatica Cloud.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Product Type translated by Informatica Cloud.</inlineHelpText>
        <label>Translated Product Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nMONITOR__Translated_Product__c</fullName>
        <description>Product translated by Informatica Cloud.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Product translated by Informatica Cloud.</inlineHelpText>
        <label>Translated Product</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nMONITOR__Treasury_Management_Bundle_Version__c</fullName>
        <description>Informatica Cloud Bundle Version for nCino_Treasury_Management_Standard</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Informatica Cloud Bundle Version.</inlineHelpText>
        <label>Treasury Management Bundle Version</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nMONITOR__Unique_Identifier__c</fullName>
        <description>Represents the Loan Number, Collateral Account Number, CIF or Customer Number, or any other unique identifier used to allow the Integration to synchronize with a Record from the external system.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Unique Identifier for a given row from the source external system.</inlineHelpText>
        <label>Unique Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nMONITOR__User_Friendly_Agent_Data_Status__c</fullName>
        <formula>IF( nMONITOR__Secure_Agent_Data_inactive__c = FALSE, &quot;Down&quot;, &quot;Running&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User Friendly Agent Data Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nMONITOR__User_Friendly_Agent_Process_Status__c</fullName>
        <formula>IF( nMONITOR__Secure_Agent_Process_inactive__c = FALSE, &quot;Down&quot;, &quot;Running&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User Friendly Agent Process Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nMONITOR__isContact__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Signifies that the Exception Record should be a Contact Record.</description>
        <inlineHelpText>Signifies that the Exception Record should be a Contact Record.</inlineHelpText>
        <label>isContact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nMONITOR__isDeposit__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Signifies that the Exception Record should be a Deposit Record.</description>
        <inlineHelpText>Signifies that the Exception Record should be a Deposit Record.</inlineHelpText>
        <label>isDeposit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nMONITOR__isObject__c</fullName>
        <label>Object Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AuthorizedAccount</fullName>
                    <label>Authorized Account</label>
                </value>
                <value>
                    <fullName>AuthorizedSigner</fullName>
                    <label>Authorized Signer</label>
                </value>
                <value>
                    <fullName>Beneficiary</fullName>
                </value>
                <value>
                    <fullName>Collateral</fullName>
                </value>
                <value>
                    <fullName>CollateralOwnership</fullName>
                    <label>Collateral Ownership</label>
                </value>
                <value>
                    <fullName>CollateralPledged</fullName>
                    <label>Collateral Pledged</label>
                </value>
                <value>
                    <fullName>Connection</fullName>
                </value>
                <value>
                    <fullName>Contact</fullName>
                </value>
                <value>
                    <fullName>Covenant</fullName>
                </value>
                <value>
                    <fullName>Deposit</fullName>
                </value>
                <value>
                    <fullName>EntityInvolvement</fullName>
                    <label>Entity Involvement</label>
                </value>
                <value>
                    <fullName>FinancialAccount</fullName>
                    <label>Financial Account</label>
                </value>
                <value>
                    <fullName>FinancialAccountRole</fullName>
                    <label>Financial Account Role</label>
                </value>
                <value>
                    <fullName>Loan</fullName>
                </value>
                <value>
                    <fullName>Participation</fullName>
                </value>
                <value>
                    <fullName>Relationship</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>